--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
         <header class="intro-text" data-anime="fade-up">
           <span class="greeting">Olá, eu sou</span>
           <h1 class="name-title">Eduardo Barros</h1>
-          <h2 class="role-title">Desenvolvedor Full Stack</h2>
+          <h2 class="role-title">Desenvolvedor Senior</h2>
           <p class="description">
             Bacharel em Sistemas de Informação com mais de 7 anos de experiência 
             criando soluções digitais inovadoras e interfaces futuristas.
