--- a/src/app/components/sobre/sobre.component.html
+++ b/src/app/components/sobre/sobre.component.html
@@ -17,6 +17,9 @@
         diáriamente aos meus estudos.
       </p>
       <p>
+        Atualmente curso <b>Pós‑Graduação em Arquitetura de Software e Soluções com IA</b> pela XP Educação.
+      </p>
+      <p>
         Ao longo de mais de 7 anos, focando no desenvolvimento de software.
         Sinto verdadeira paixão pelo que faço. Busco influenciar e motivar
         pessoas nesse caminho difícil e contínuo, mas se dedicando, abre um
@@ -31,7 +34,7 @@
         Desenvolvedor Sênior
       </h3>
       <p>
-        Atualmente alocado como Desenvolvedor Sênior pela Automind, atuando em
+        Atualmente alocado como Desenvolvedor Sênior pela HyTI em São Paulo, atuando em
         projetos legado, desenvolvimento, melhorias e novas features.
       </p>
       <h4>
